# Nova.CL

./: .env  .gitignore  README.md  README_EN.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug9.yml  ch.yml  config.yml  feature.yml
.github/workflows/: dev_build.yml  publish_build.yml
.tauri/: novacl.key.pub
.trae/documents/: 实现 Rust 侧 HTTP 请求库.md  实现 TOML 配置文件系统.md
docs/: EULA.md  EULA_EN.md  PRIVACY_POLICY.md  PRIVACY_POLICY_EN.md
src/: App.vue  console-injected.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/addons/auth/: index.html
src-tauri/addons/auth/assets/: index-B2qLF3w8.js  index-D8P2Asyl.css
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/env/: command.rs  mod.rs
src-tauri/src/http/: client.rs  command.rs  mod.rs  server.rs  types.rs
src-tauri/src/logging/: command.rs  logging.rs  mod.rs
src-tauri/src/system/: command.rs  mod.rs  ram.rs
src-tauri/src/toml/: command.rs  crypto.rs  error.rs  manager.rs  mod.rs  test.rs  types.rs  utils.rs
src/assets/: index.css
src/components/: AccountCard.vue  AccountStack.vue  Avatar.vue  BankCard.vue  DoubleStateProgress.vue  DownloadVersionEntry.vue  GraphicalButton.vue  Hint.vue  Loading.vue  LoadingNoResult.vue  ModrinthProjectItem.vue  ModrinthSearchFilter.vue  ModrinthSearchOption.vue  ModrinthSearchPage.vue  Player.vue  SearchInput.vue  ThemeController.vue  VirtualDownloadVersionEntryList.vue  index.ts
src/composables/: index.ts  useResourceFilters.ts  useTheme.ts  useTimer.ts
(+67 files in other folders)
